<resources>
    <string name="app_name">RogueProject</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_advance_view_pager">AdvanceViewPagerActivity</string>
    <string name="subtlety_overview_string">Subtlety has received an array of changes in Legion, altering both their core identity and their strengths and weaknesses. Subtlety Rogues continue to provide strong single-target pressure, but it now brings respectable AoE to the table as well. Much of the rotation involves actively shifting between two stances, in and out of Stealth. Some abilities can be used at anytime, however, certain abilities can only be used while you are in Stealth Icon Stealth. There are only a limited number of ways to activate Stealth Icon Stealth during combat, and therefore the core component of this specialization revolves around managing your abilities to correctly time windows of burst.</string>

    <string name="weaponmaster" formatted="false">Weaponmaster: grants your abilities a 6% chance to strike twice per target hit.</string>
    <string name="master_of_subtlety" formatted="false">Master of Subtlety: Attacks made while stealthed and for 5 seconds after breaking stealth cause an additional 10% damage.</string>
    <string name="gloomblade" formatted="false">Gloomblade: replaces your Backtab, deals shadow damage and is unaffected by facing.</string>

    <string name="nightstalker" formatted="false">Nightstalker: increase movement speed by 20%% and damage by 12%% while Stealth and Shadow Dance are active.</string>
    <string name="subterfuge" formatted="false">Subterfuge allows: abilities requiring Stealth to be used for an additional 3 seconds after Stealth breaks.</string>
    <string name="shadow_focus" formatted="false">Shadow Focus: reduces the Energy cost of abilities by 25% when used from stealth or while Shadow Dance is active.</string>

    <string name="soothing_darkness" formatted="false">Soothing Darkness: allows you to regenerate 3 percent of your maximum life per second while Stealth is active.</string>
    <string name="elusiveness" formatted="false">Elusiveness: causes Feint to also grant 30 percent reduced damage taken from all sources.</string>
    <string name="cheat_death" formatted="false">Cheat Death: causes fatal damage to instead reduce you to 7 percent of your maximum health and grant 85% reduced damage taken for 3 seconds. Cheat Death cannot save you from damage great that double your maximum health. It has a 6-minute cooldown.</string>

    <string name="strike_from_shadows" formatted="false">Strike from the Shadows: causes your Shadowstrike to also stun the target for 2 seconds (5-second daze against players).</string>
    <string name="prey_on_the_weak" formatted="false">Prey on the Weak: causes enemies disabled from your Kidney Shot, Sap, and Cheap Shot to take 10% increased damage from all sources.</string>
    <string name="tangled_shadow" formatted="false">Tangled Shadow: causes Nightblade to decrease the targets movement speed by an additional 20%.</string>

    <string name="dark_shadows" formatted="false">Dark Shadows: causes you to deal an additional 30% damage while Shadow Dance is active.</string>
    <string name="alacrity" formatted="false">Alacrity causes finishing moves to have a 20% chance per Combo Point to grant 2% haste for 20 seconds, stacking 10 times.</string>
    <string name="enveloping_shadows" formatted="false">Enveloping Shadows: grants an additional charge to Shadow Dance and causes Deepening Shadows to reduce the cooldown of dance by an additional 1.0 second per Combo Point consumed.</string>

    <string name="master_of_shadows" formatted="false">Master of Shadows: causes you to immediately gain 25 Energy when entering Stealth or Shadow Dance.</string>
    <string name="mark_of_death" formatted="false">Mark of Death: marks a target and instantly generates 5 Combo Points. The cooldown is reset if the marked target dies.</string>
    <string name="death_from_above" formatted="false">Death from Above: is a two-part finishing move with a short cooldown that ends with an automatic cast of a 50% stronger Eviscerate.</string>
    <string name="swipe_right_for_subtlety_rotation">Swipe Right for Subtlety Rotation</string>

</resources>
